# claude-code-architect-exam

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
evals/: pyproject.toml  run_evals.py
evals/datasets/: generation_cases.json  quality_calibration.json
evals/evals_server/: server.py
evals/graders/: code_grader.py  model_grader.py
evals/prompts/: variants.py
exam-app/: .mcp.json  pyproject.toml
exam-app/mcp_server/: evals.py  exam_content.py  hooks.py  scoring.py  server.py  session.py
exam-app/tests/: __init__.py  conftest.py  test_get_next_question.py
