[project]
name = "claude-architect-evals"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6",
]

[project.scripts]
evals-server = "evals_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals_server", "graders", "prompts", "datasets"]
